syntax = "proto3";

message SendHotelFeedbackData {
    string area = 1;
    string description = 2;
}
